--- a/index.html
+++ b/index.html
@@ -6,11 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecommerce Website</title>
     <link rel = 'stylesheet' href = 'style.css'>
+    <link rel="stylesheet" 
+  href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+
 </head>
 
 <body>
 
-    <h1>Heading 1 example</h1>
+    <section id="header">
+        <a href="#"><img src="scribble_64627.png" class = "logo" alt="logo"></a>
+
+        <div>
+            <ul id = "navbar">
+                <li> <a href="index.html">Home</a></li>
+                <li> <a href="shop.html">Shop</a></li>
+                <li> <a href="blog.html">Blog</a></li>
+                <li> <a href="about.html">About</a></li>
+                <li> <a href="contact.html">Contact</a></li>
+                <li> <a href="cart.html"><i class="fa fa-shopping-bag" aria-hidden="false"></i>
+                </a></li>
+            </ul>
+        </div>
+    </section>
+
     <script src = 'script.js'></script>
 </body>
 </html>
