--- a/index.html
+++ b/index.html
@@ -37,6 +37,33 @@
         <button>Shop Now</button>
     </section>
 
+    <section id = "feature" class="section-p1">
+        <div class="fe-box">
+            <img src = "shipping.jpg" alt = "free-shipping">
+            <h6>Free Shipping</h6>
+        </div>
+        <div class="fe-box">
+            <img src = "online-order.jpg" alt = "free-shipping">
+            <h6>Online Order</h6>
+        </div>
+        <div class="fe-box">
+            <img src = "save-money.png" alt = "free-shipping">
+            <h6>Save Money</h6>
+        </div>
+        <div class="fe-box">
+            <img src = "promotions.png" alt = "free-shipping">
+            <h6>Promotions</h6>
+        </div>
+        <div class="fe-box">
+            <img src = "happy-sell.jpg" alt = "free-shipping">
+            <h6>Happy Sell</h6>
+        </div>
+        <div class="fe-box">
+            <img src = "247-Support.jpg" alt = "free-shipping">
+            <h6>24x7 Support</h6>
+        </div>
+    </section>
+
     <script src = 'script.js'></script>
 </body>
 </html>
