--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" 
   href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
 
+  <link rel="icon" href="http://127.0.0.1:5500/favicon.ico" type="image/x-icon">
+
+
+
 </head>
 
 <body>
@@ -61,6 +65,156 @@
         <div class="fe-box">
             <img src = "247-Support.jpg" alt = "free-shipping">
             <h6>24x7 Support</h6>
+        </div>
+    </section>
+
+    <section id="product1" class="section-p1">
+        <h2>Featured Products</h2>
+        <p>Summer Collection - New & Modern Design</p>
+        <div class="pro-container">
+            <div class="pro">
+                <img src="featured_product_1.jpg" alt="">
+                <div class="description">
+                    <span>Adidas</span>
+                    <h5>Cartoon Animated Tee</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-shopping-bag cart"></i>
+                </a>
+            </div>
+
+            <div class="pro">
+                <img src="featured_product_2.jpg" alt="">
+                <div class="description">
+                    <span>Adidas</span>
+                    <h5>Cartoon Animated Tee</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-shopping-bag cart"></i>
+                </a>
+            </div>
+
+            <div class="pro">
+                <img src="featured_product_3.webp" alt="">
+                <div class="description">
+                    <span>Adidas</span>
+                    <h5>Cartoon Animated Tee</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-shopping-bag cart"></i>
+                </a>
+            </div>
+
+            <div class="pro">
+                <img src="featured_product_4.jpg" alt="">
+                <div class="description">
+                    <span>Adidas</span>
+                    <h5>Cartoon Animated Tee</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-shopping-bag cart"></i>
+                </a>
+            </div>
+
+            <div class="pro">
+                <img src="shirt_1.jpg" alt="">
+                <div class="description">
+                    <span>Adidas</span>
+                    <h5>Cartoon Animated Tee</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-shopping-bag cart"></i>
+                </a>
+            </div>
+
+            <div class="pro">
+                <img src="shirt_2.jpg" alt="">
+                <div class="description">
+                    <span>Adidas</span>
+                    <h5>Cartoon Animated Tee</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-shopping-bag cart"></i>
+                </a>
+            </div>
+
+            <div class="pro">
+                <img src="shirt_3.jpg" alt="">
+                <div class="description">
+                    <span>Adidas</span>
+                    <h5>Cartoon Animated Tee</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-shopping-bag cart"></i>
+                </a>
+            </div>
+
+            <div class="pro">
+                <img src="shirt_4.png" alt="">
+                <div class="description">
+                    <span>Adidas</span>
+                    <h5>Cartoon Animated Tee</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-shopping-bag cart"></i>
+                </a>
+            </div>
         </div>
     </section>
 
